--- a/form-validator/form-test.html
+++ b/form-validator/form-test.html
@@ -260,6 +260,10 @@
             <label class="control-label">Confirm e-mail</label>
             <input name="test" data-validation="confirmation" data-validation-confirm="testmail" />
         </div>
+      <div class="form-group">
+            <label class="control-label">Number auto formatted '0,0.0000'</label>
+            <input name="numeral" data-sanitize="numberFormat" data-sanitize-number-format="0,0.0000" />
+        </div>
         <div class="form-group">
             <label class="control-label">Alphanumeric (will only be validated if the checkbox is checked)</label>
             <input name="test2"
@@ -344,6 +348,7 @@
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
 <script src="jquery.form-validator.js"></script>
 <script>
 (function($, window) {
