--- a/test/qunit.html
+++ b/test/qunit.html
@@ -11,9 +11,9 @@
 <div id="qunit-fixture"></div>
 <form id="dummy-form" style="visibility: hidden"></form>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script src="jquery.form-validator.js"></script>
-<script src="//code.jquery.com/qunit/qunit-1.12.0.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="../form-validator/jquery.form-validator.js"></script>
+<script src="http://code.jquery.com/qunit/qunit-1.12.0.js"></script>
 <script>
 (function($) {
 
