now possible to allow non-zero-leading dates, issue #205

--- a/test/qunit.html
+++ b/test/qunit.html
@@ -511,7 +511,8 @@
                 {val:'2013-02-29', isValid:false},
                 {val:'2000-04-31', isValid:false},
                 {val:'2000-13-1', isValid:false},
-                {val:'2000-1-1', isValid:false},
+                {val:input('2000-1-1', {'':'date'}), isValid:false},
+                {val:input('2000-1-1', {'':'date', 'require-leading-zero':'false'}), isValid:true},
                 {val:'-01-01', isValid:false},
                 {val:input('01/01/2000', {'format':'dd/mm/yyyy', '':'date'}), isValid:true},
                 {val:input('29/02/2000', {'format':'dd/mm/yyyy', '':'date'}), isValid:true},
