setting up travis...

--- a/test/qunit.html
+++ b/test/qunit.html
@@ -793,6 +793,13 @@
                         'data-sanitize-insert-right' : ' right...'
                     }
                 },
+                strip: {
+                    val: '$tes@ti$ng@$',
+                    expected: 'testing',
+                    attr: {
+                        'data-sanitize-strip' : '$, @'
+                    }
+                },
                 escape : {
                     val : '<p style="color: pink">hejsan & så\' vidare</p>',
                     expected:  '&lt;p style=&quot;color: pink&quot;&gt;hejsan &amp; så&#8217; vidare&lt;/p&gt;'                }
