better platform support for unit tests

--- a/test/qunit.html
+++ b/test/qunit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>QUnit Tests</title>
-    <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.12.0.css">
+    <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
 </head>
 <body>
 
@@ -11,9 +11,9 @@
 <div id="qunit-fixture"></div>
 <form id="dummy-form" style="visibility: hidden"></form>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script src="../form-validator/jquery.form-validator.js"></script>
-<script src="https://code.jquery.com/qunit/qunit-1.19.0.js"></script>
+<script src="../node_modules/jquery/dist/jquery.min.js"></script>
+<script src="../node_modules/qunitjs/qunit/qunit.js"></script>
+<script src="../form-validator/jquery.form-validator.min.js"></script>
 <script>
 (function($) {
 
