--- a/test/form.html
+++ b/test/form.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Form Test</title>
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.4/themes/black-tie/jquery-ui.css" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/black-tie/jquery-ui.css" />
     <link rel="stylesheet" href="../form-validator/theme-default.css" />
     <style>
 
@@ -348,14 +348,14 @@
         </p>
     </form>
 </div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
-<script src="../form-validator/jquery.form-validator.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
+<script src="../form-validator/jquery.form-validator.min.js"></script>
 <script>
 (function($, window) {
 
-    var dev = '.dev'; //window.location.hash.indexOf('dev') > -1 ? '.dev' : '';
+    var dev = window.location.href.indexOf('dev') > -1 ? '.dev' : '';
 
     // setup datepicker
     $("#datepicker").datepicker();
