Issue #315: Remove special case for <input type="number"/>
* Add tests for input type=number
* Change spacing for better legibility
* Remove statement in core-validators which always evaluated to true
* Remove unnecessary if-else branch checking for data-validation-optional

If a value is entered into an input type=number that the browser cannot parse, the browser
sets the value of it to an empty string. This means that we can't tell the difference between
a browser-unparsable input and an empty input.

--- a/test/form.html
+++ b/test/form.html
@@ -308,6 +308,10 @@
             <input type="number" required="required" maxlength="30" />
         </div>
         <div class="form-group">
+            <label class="control-label">type="number" (optional)</label>
+            <input type="number" data-validation-optional="true"/>
+        </div>
+        <div class="form-group">
             <label class="control-label">type="number" range[-5;5]</label>
             <input type="number" min="-5" max="5" required="required" />
         </div>
