--- a/test/form.html
+++ b/test/form.html
@@ -162,19 +162,21 @@
                    data-validation-help="The word is &quot;secret&quot;"
                    data-validation="length server"
                    data-validation-length="min2"
-                   data-validation-url="http://formvalidator.net/validate-email.php" />
+                   data-validation-url="http://www.formvalidator.net/validate-email.php" />
         </div>
         <div class="form-group">
             <label class="control-label">File validation</label>
             <input type="file" name="some-file1" class="form-control"
                    data-validation="size mime required dimension"
                    data-validation-help="Images only"
-                   data-validation-error-msg-size="The file cant be larger than 400kb"
-                   data-validation-error-msg="You must upload an image file (max 400 kb)"
                    data-validation-allowing="jpg, png, ico"
                    data-validation-dimension="100-800"
                    data-validation-ratio="8:10-12:10"
-                   data-validation-max-size="400kb" />
+                   data-validation-max-size="400kb"
+                   data-validation-error-msg-size="The file cant be larger than 400kb"
+                   data-validation-error-msg-ratio="The image dimensions has to be from 8:10-12:10"
+                   data-validation-error-msg="You must upload an image file (jpg,png or ico, max 400 kb)"
+            />
         </div>
         <div class="form-group">
             <label class="control-label">File name</label>
