--- a/test/form.html
+++ b/test/form.html
@@ -302,7 +302,7 @@
         </div>
         <div class="form-group">
             <label class="control-label">type="url" (optional)</label>
-            <input type="url" />
+            <input type="url" data-validation="length" data-validation-length="20-50" />
         </div>
         <div class="form-group">
             <label class="control-label">type="number"</label>
