Fix IE compatibility issue, numeral errors on empty strings
-Array.prototype.find not supported yet in IE (switch to using regex)
-Check for empty string before calling numeral functions
-Avoid testing on alternate delimiters in numeral -- numeral does not seem to be returning
correct values

--- a/test/form.html
+++ b/test/form.html
@@ -264,12 +264,16 @@
             <label class="control-label">Confirm e-mail</label>
             <input name="test" data-validation="confirmation" data-validation-confirm="testmail" />
         </div>
-      <div class="form-group">
+        <div class="form-group">
+          <!-- The numeral library appears to not parse correctly when periods are the thousands delimiter
+          and commas are the decimal delimiter. -->
             <label class="control-label">Number auto formatted '0,0.0000'</label>
             <input name="numeral" data-sanitize="numberFormat" data-sanitize-number-format="0,0.0000" />
-            <label class="control-label">Number format with numeral</label>
+        </div>
+        <div class="form-group">
+            <label class="control-label">Number format '0,0.0'</label>
             <input type="text" name="amount" data-validation="number" data-validation-allowing="float"
-                   data-sanitize="numberFormat"  data-sanitize-number-format="0.0,0">
+                   data-sanitize="numberFormat"  data-sanitize-number-format="0,0.0">
         </div>
         <div class="form-group">
             <label class="control-label">Alphanumeric (will only be validated if the checkbox is checked)</label>
@@ -453,24 +457,6 @@
             }
             console.log('Input '+this.name+' is '+validationResult);
         });
-
-  //Initialize numeral with the correct delimiters for the numberFormat sanitizer
-  numeral.language('it', {
-    delimiters: {
-      thousands: '.',
-      decimal: ','
-    },
-    abbreviations: {
-      thousand: 'k',
-      million: 'm',
-      billion: 'b',
-      trillion: 't'
-    },
-    currency: {
-      symbol: '€'
-    }
-  });
-  numeral.language('it');
 
 })(jQuery, window);
 </script>
